# VideoFaceId

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md  readme.txt
include/: MultiTracker.h  VideoProcessing.h  matrix_read_write.h  model.h
src/: MultiTracker.cpp  VideoProcessing.cpp  matrix_read_write.cpp  model.cpp
test/annotations/christian_bale1_fin_s/: annotation_0.txt
test/annotations/christian_bale2_fin_s/: annotation_0.txt
test/annotations/ford1_fin_s/: annotation_1.txt
test/annotations/ford2_fin_m/: annotation_1.txt  annotation_10.txt
test/annotations/gosling1_fin_m/: annotation_10.txt  annotation_5.txt
test/annotations/gosling2_fin_m/: annotation_1.txt  annotation_5.txt
test/annotations/jackie_chan1_fin_s/: annotation_2.txt
test/annotations/jackie_chan2_fin_m/: annotation_2.txt  annotation_6.txt
test/annotations/linus1_fin_m/: annotation_10.txt  annotation_3.txt
test/annotations/linus2_fin_s/: annotation_3.txt
test/annotations/marques1_fin_s/: annotation_4.txt
test/annotations/marques2_fin_s/: annotation_4.txt
test/annotations/other10_fin_s/: annotation_10.txt
test/annotations/other1_fin_m/: annotation_10.txt
test/annotations/other2_fin_s/: annotation_10.txt
test/annotations/other3_fin_m/: annotation_10.txt
test/annotations/other4_fin_s/: annotation_10.txt
test/annotations/other5_fin_s/: annotation_10.txt
test/annotations/other6_fin_s/: annotation_10.txt
utilities/: trainingsetextractor.py  trainingsetextractor_instructions.md  videoannotations.py  videoannotations_instructions.md
(+18 files in other folders)
